==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/stm32/src/adc/implementation_1/subimplementation_2/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_adc_pin_map.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_module_num(_module_num) (_module_num - 1)
#define HAL_LL_ADC_CSR_OFFSET                  ( 0x300 / 4 )
#define HAL_LL_ADC_CCR_OFFSET                  ( 0x308 / 4 )
#define HAL_LL_ADC_CDR_OFFSET                  ( 0x30A / 4 )
#define HAL_LL_ADC_ASCR_OFFSET                 ( 0x2C  / 4 )
#define HAL_LL_ADC_APB2ENR_SYSCFGEN            0
#define HAL_LL_ADC_VREF_ENVR                   0
#define HAL_LL_ADC_ADRDYIE_BIT                 0
#define HAL_LL_ADC_ADEN_BIT                    0
#define HAL_LL_ADC_ADRDY_BIT                   0
#define HAL_LL_ADC_ADDIS_BIT                   1
#define HAL_LL_ADC_EOC_BIT                     1
#define HAL_LL_ADC_ADSTART_BIT                 2
#define HAL_LL_ADC_RESOLUTION_BIT0             3
#define HAL_LL_ADC_VREF_VRR                    3
#define HAL_LL_ADC_RESOLUTION_BIT1             4
#define HAL_LL_ADC_ALIGN_BIT                   5
#define HAL_LL_ADC_ENABLE_CLOCK                13

hal_ll_err_t hal_ll_adc_register_handle( hal_ll_pin_name_t pin, hal_ll_adc_voltage_reference_t vref_input, hal_ll_adc_resolution_t resolution, hal_ll_adc_handle_register_t *handle_map, uint8_t *hal_module_id )
{
    uint16_t pin_check_result;
    hal_ll_adc_pin_id index = {HAL_LL_PIN_NC};

    if ( (pin_check_result = hal_ll_adc_check_pins( pin, &index, handle_map )) == HAL_LL_PIN_NC ) {
        return HAL_LL_ADC_WRONG_PIN;
    };

    switch ( resolution )
    {
    case HAL_LL_ADC_RESOLUTION_6_BIT:
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_6BIT_RES;
        break;
    case HAL_LL_ADC_RESOLUTION_8_BIT:
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_8BIT_RES;
        break;
    case HAL_LL_ADC_RESOLUTION_10_BIT:
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_10BIT_RES;
        break;
    case HAL_LL_ADC_RESOLUTION_12_BIT:
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_12BIT_RES;
        break;
    default:
        return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    switch ( vref_input )
    {
        case HAL_LL_ADC_VREF_EXTERNAL:
            break;
        case HAL_LL_ADC_VREF_DEFAULT:
            break;
        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    if ( hal_ll_adc_hw_specifics_map[pin_check_result].pin != pin )
    {
        hal_ll_adc_map_pin( pin_check_result, &index );

        handle_map[pin_check_result]->init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].base;

    handle_map[pin_check_result]->hal_ll_adc_handle = (handle_t *)&hal_ll_module_state[pin_check_result].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_resolution(handle_t *handle, hal_ll_adc_resolution_t resolution)
{
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);

    low_level_handle->init_ll_state = false;

    switch( resolution ) {
        case HAL_LL_ADC_RESOLUTION_6_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_6BIT_RES;
            break;
        case HAL_LL_ADC_RESOLUTION_8_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_8BIT_RES;
            break;
        case HAL_LL_ADC_RESOLUTION_10_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_10BIT_RES;
            break;
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_12BIT_RES;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf )
{
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_base_handle_t *base = ( hal_ll_adc_base_handle_t * )hal_ll_adc_hw_specifics_map_local->base ;

    base->sqr1 &= ~HAL_LL_ADC_CONVERSION_ONE;
    base->sqr1 |= ( ( hal_ll_adc_hw_specifics_map_local->channel << 6 ) & ( HAL_LL_ADC_CONVERSION_ONE ) );

    // Start the conversion.
    set_reg_bit( &( base->cr ), HAL_LL_ADC_ADSTART_BIT );

    // The application should allow a delay of tSTAB between power up and start of conversion.
    Delay_1us();

    while ( !( check_reg_bit( &( base->isr ), HAL_LL_ADC_EOC_BIT ) ) );
    // Conversion result from SS3.
    *readDatabuf = base->dr;

    return HAL_LL_ADC_SUCCESS;
}

static void _hal_ll_adc_enable_clock( uint8_t base )
{
    switch ( base )
    {
        #ifdef ADC_MODULE_1
        case ( hal_ll_adc_module_num(ADC_MODULE_1) ):
            adc1_enable_clock();
            break;
        #endif
        #ifdef ADC_MODULE_2
        case ( hal_ll_adc_module_num(ADC_MODULE_2) ):
            adc2_enable_clock();
            break;
        #endif
        #ifdef ADC_MODULE_3
        case ( hal_ll_adc_module_num(ADC_MODULE_3) ):
            adc3_enable_clock();
            break;
        #endif
    }
}

static void _hal_ll_adc_hw_init( hal_ll_adc_base_handle_t *base, uint32_t resolution )
{
    static uint32_t wait_loop_index = 0;
    static uint32_t *reg;
    reg = HAL_LL_ADC_CCIPR;

    // Select ADC clock source.
    *reg |= HAL_LL_ADC_CLK_SRC;

    // Exit from deep power down mode.
    if ( check_reg_bit( &( base->cr ), HAL_LL_ADC_DEEPPWD_BIT ) )
    {
        clear_reg_bit( &( base->cr ), HAL_LL_ADC_DEEPPWD_BIT );
    }

    // Enable voltage regulator.
    base->cr &= HAL_LL_ADC_VOLTAGE;

    if ( !( check_reg_bit( &( base->cr ), HAL_LL_ADC_ADVREGEN_BIT ) ) )
    {
        set_reg_bit( &( base->cr ), HAL_LL_ADC_ADVREGEN_BIT );
    }

    // Enable ADC interrupts.
    set_reg_bit( &( base->ier ), HAL_LL_ADC_ADRDYIE_BIT );

    // Disable ADC
    if ( check_reg_bit( &( base->cr ), HAL_LL_ADC_ADEN_BIT ) )
    {
        set_reg_bit( &( base->cr ), HAL_LL_ADC_ADDIS_BIT );
    }

    // Voltage reference enable, ckmode SYSCLK.
    reg = HAL_LL_ADC_CCR;
    *reg |= HAL_LL_ADC_CKMODE;

    // Select calibration mode.
    clear_reg_bit( &( base->cr ), HAL_LL_ADC_ADCALDIF_BIT );

    // Start ADC calibration.
    set_reg_bit( &( base->cr ), HAL_LL_ADC_ADCAL_BIT );

    // Wait for calibration.
    while ( check_reg_bit( &( base->cr ), HAL_LL_ADC_ADCAL_BIT ) );

    // Prescaler.
    *reg &= HAL_LL_ADC_PRESCALER;

    // Clear ADRDY bit ADC_ISR by writting 1.
    set_reg_bit( &( base->isr ), HAL_LL_ADC_ADRDY_BIT );

    // Set delay for voltage regulator to be initialized correctly.
    wait_loop_index = 10 * ( Get_Fosc_kHz() / 1000 );
    while( wait_loop_index != 0 )
    {
        wait_loop_index--;
    }

    // Enable ADC.
    set_reg_bit( &( base->cr ), HAL_LL_ADC_ADEN_BIT );

    // ADRDY bit.
    while ( !( check_reg_bit( &( base->cr ), HAL_LL_ADC_ADRDY_BIT ) ) );

    // Resolution.
    base->cfgr &= HAL_LL_RESOLUTION_MASK;
    base->cfgr |= resolution;

    // Data alignment.
    clear_reg_bit( &( base->cfgr ), HAL_LL_ADC_ALIGN_BIT );

    // Discontinuos mode disabled.
    clear_reg_bit( &( base->cfgr ), HAL_LL_ADC_DISCEN_BIT );

    // Continuos conversion mode.
    clear_reg_bit( &( base->cfgr ), HAL_LL_ADC_CONT_BIT );

    // Regular channel sequence length.
    base->sqr1 &= HAL_LL_ADC_CONVERSION;
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {

    uint32_t *tmp_switch;

    hal_ll_gpio_analog_input( hal_ll_gpio_port_base( hal_ll_gpio_port_index( map->pin ) ),
                                                     hal_ll_gpio_pin_mask( map->pin ) );

    // ADC Switch.
    #if defined(STM32L486xx) || defined(STM32L476xx) || defined(STM32L475xx) || \
        defined(STM32L4S9xx) || defined(STM32L4S7xx) || defined(STM32L4S5xx) || \
        defined(STM32L4R9xx) || defined(STM32L4R7xx) || defined(STM32L4R5xx)
    tmp_switch = hal_ll_gpio_port_base( hal_ll_gpio_port_index( map->pin ) );
    tmp_switch += HAL_LL_ADC_ASCR_OFFSET;
    *tmp_switch |= 1ul << ( map->pin & HAL_LL_ADC_PIN_MASK );
    #endif

    _hal_ll_adc_enable_clock( map->module_index );

    _hal_ll_adc_hw_init((hal_ll_adc_base_handle_t *)map->base, map->resolution);

}
