==> MikroElektronika/mikrosdk_v2/sdk/targets_org2/arm/mikroe/nxp/src/adc/implementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_adc_pin_map.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_struct(_handle) ((hal_ll_adc_base_handle_t *)_handle)
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define HAL_LL_ADC0_ENABLE_CLOCK            27
#define HAL_LL_ADC1_ENABLE_CLOCK            27
#define HAL_LL_ADC_LOW_POWER_ENABLE         7
#define HAL_LL_ADC_CLOCK_DIV_1              0x00000000UL
#define HAL_LL_ADC_CLOCK_DIV_2              0x00000020UL
#define HAL_LL_ADC_CLOCK_DIV_4              0x00000040UL
#define HAL_LL_ADC_CLOCK_DIV_8              0x00000060UL
#define HAL_LL_ADC_LONG_SAMPLE_TIME_ENABLE  0x00000010UL
#define HAL_LL_ADC_8BIT_RES                 0x00000000UL
#define HAL_LL_ADC_10BIT_RES                0x00000008UL
#define HAL_LL_ADC_12BIT_RES                0x00000004UL
#define HAL_LL_ADC_16BIT_RES                0x0000000CUL
#define HAL_LL_ADC_CLOCK_SOURCE_BUS         0x00000000UL
#define HAL_LL_ADC_CLOCK_SOURCE_ALTERNATE2  0x00000001UL
#define HAL_LL_ADC_CLOCK_SOURCE_ALTERNATE   0x00000002UL
#define HAL_LL_ADC_CLOCK_SOURCE_ASYNC       0x00000003UL

hal_ll_err_t hal_ll_adc_register_handle(hal_ll_pin_name_t pin, hal_ll_adc_voltage_reference_t vref_input, hal_ll_adc_resolution_t resolution, hal_ll_adc_handle_register_t *handle_map, uint8_t *hal_module_id) {
    uint16_t pin_check_result;
    hal_ll_adc_pin_id index = { HAL_LL_PIN_NC };

    if (( pin_check_result = hal_ll_adc_check_pins( pin, &index, handle_map )) == HAL_LL_PIN_NC ) {
        return HAL_LL_ADC_WRONG_PIN;
    }

    switch ( resolution ) {
        case HAL_LL_ADC_RESOLUTION_8_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_8BIT_RES;
            break;
        case HAL_LL_ADC_RESOLUTION_10_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_10BIT_RES;
            break;
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_12BIT_RES;
            break;
        case HAL_LL_ADC_RESOLUTION_16_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_16BIT_RES;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    switch ( vref_input ) {
        case HAL_LL_ADC_VREF_EXTERNAL: // DEFAULT CASE
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    if ( hal_ll_adc_hw_specifics_map[ pin_check_result ].pin != pin ) {
        hal_ll_adc_map_pin( pin_check_result, &index );
        handle_map[ pin_check_result ].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_adc_handle = ( handle_t* )&hal_ll_adc_hw_specifics_map[ pin_check_result ].base;
    handle_map[ pin_check_result ].hal_ll_adc_handle = ( handle_t* )&hal_ll_module_state[ pin_check_result ].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_resolution( handle_t *handle, hal_ll_adc_resolution_t resolution ) {
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_adc_get_module_state_address );

    if( low_level_handle->hal_ll_adc_handle == NULL ) {
        return HAL_LL_MODULE_ERROR;
    }

    low_level_handle->init_ll_state = false;

    switch ( resolution ) {
        case HAL_LL_ADC_RESOLUTION_8_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_8BIT_RES;
            break;
        case HAL_LL_ADC_RESOLUTION_10_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_10BIT_RES;
            break;
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_12BIT_RES;
            break;
        case HAL_LL_ADC_RESOLUTION_16_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_16BIT_RES;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );
    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf ) {

    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_adc_get_module_state_address );
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_base_handle_t *base = ( hal_ll_adc_base_handle_t * )hal_ll_adc_hw_specifics_map_local->base ;

    if( low_level_handle->hal_ll_adc_handle == NULL ) {
        return HAL_LL_MODULE_ERROR;
    }

    base->sc1a = hal_ll_adc_hw_specifics_map_local->channel & HAL_LL_ADC_MASK_CHANNEL;

    while ( 0 == ( base->sc1a & HAL_LL_ADC_COCO_FLAG ) );

    *readDatabuf = ( uint16_t )base->ra;

    return HAL_LL_ADC_SUCCESS;
}

static void hal_ll_adc_enable_clock( uint8_t module_index ) {
    switch( module_index ) {
        #ifdef ADC_MODULE_0
        case hal_ll_adc_module_num( ADC_MODULE_0 ):
            hal_ll_adc0_enable_clock();
            break;
        #endif
        #ifdef ADC_MODULE_1
        case hal_ll_adc_module_num( ADC_MODULE_1 ):
            hal_ll_adc1_enable_clock();
            break;
        #endif
    }
}

static void hal_ll_adc_hw_init( hal_ll_adc_base_handle_t *base, uint32_t resolution, hal_ll_adc_hw_specifics_map_t *map ) {

    // Reset all registers to a known state.
    base->cfg1 = 0;
    base->cfg2 = 0;
    base->cv1  = 0;
    base->cv2  = 0;
    base->sc2  = 0;
    base->sc3  = 0;

    // Clear ADC Configuration Register 1 (ADCx_CFG1).
    base->cfg1 &= ~HAL_LL_ADC_CFG1_CLEAR_MASK;

    // Enable low power mode.
    set_reg_bit( &base->cfg1, HAL_LL_ADC_LOW_POWER_ENABLE );

    // Set ADC Input Clock divider ratio.
    base->cfg1 |= HAL_LL_ADC_CLOCK_DIV_8;

    // Set Long Sample time.
    base->cfg1 |= HAL_LL_ADC_LONG_SAMPLE_TIME_ENABLE;

    // Set ADC Resolution.
    base->cfg1 |= resolution;

    // Set ADC Clock source.
    base->cfg1 |= HAL_LL_ADC_CLOCK_SOURCE_ASYNC;

    // Clear ADC Configuration Register 2 (ADCx_CFG2).
    base->cfg2 &= ~HAL_LL_ADC_CFG2_CLEAR_MASK;

    // Changes the ADC mux setting to select between alternate sets of ADC channels.
    hal_ll_adc_set_subchannel( map->base, map->pin );

    // Async Clock Output Enable.
    base->cfg2 |= HAL_LL_ADC_ASYNC_CLOCK_ENABLE;

}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {

    volatile uint32_t port_name = hal_ll_gpio_port_base(hal_ll_gpio_port_index(map->pin));

    hal_ll_gpio_analog_input( &port_name,
                              hal_ll_gpio_pin_mask( map->pin ) );

    hal_ll_adc_enable_clock( map->module_index );

    hal_ll_adc_hw_init( map->base, map->resolution, map );

}
